# webserpent

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: index.html  search.js  webserpent.html
docs/webserpent/: driver_management.html  pom.html  selenium.html
docs/webserpent/driver_management/: browser_options.html
tests/: test_configs.py
tests/integration/driver_creation/: test_browser_options_and_driver.py
tests/unit/: test_demo.py  test_placeholder.py
tests/unit/driver_management/: test_browser_options_builder.py  test_driver_factory.py
tests/unit/logging/: test_logger.py
tests/unit/selenium/: test_alert.py  test_driver.py  test_element.py  test_select.py  test_wait.py
webserpent/: configs.py  demo.py  enums.py  pytest_plugin.py
webserpent/configurations/: configs.py  configs_base.py  system.py  timeouts.py  webdriver.py
webserpent/driver_management/: browser_options.py  driver_factory.py  options_builder.py
webserpent/exceptions/: exceptions.py
webserpent/logging/: logger.py
webserpent/pom/: browser.py  page.py
webserpent/selenium/: alert.py  driver.py  element.py  select.py  wait.py
